fixed slider caption on mobile

--- a/dev/scss/nav.scss
+++ b/dev/scss/nav.scss
@@ -82,7 +82,7 @@ div.top-nav {
 			
 		}
 		&.light {
-			background: linear-gradient(rgba(0,0,0,.3), transparent);
+			background: linear-gradient(rgba(0,0,0,.5), transparent);
 			color: $lighterGrey;
 			border: none;
 			position: absolute;
